# agentcore-public-stack

./: .gitignore  CLAUDE.MD  README.md  TEMP_DEVOPS_README.md  deploy.sh  setup.sh  start.sh
.github/agents/: devops-agent.agent.md
.github/workflows/: app-api.yml  frontend.yml  gateway.yml  inference-api.yml  infrastructure.yml  test.yml
backend/: Dockerfile.app-api  Dockerfile.inference-api  Dockerfile.rag-ingestion  README.md  pyproject.toml
backend/src/: .env.example  .gitignore
backend/src/agentcore/: __init__.py  pyproject.toml  setup.py
backend/src/agentcore/agent/: __init__.py  agent.py
backend/src/agentcore/agent/hooks/: __init__.py
backend/src/agentcore/utils/: __init__.py  event_formatter.py
devops-project/: CLAUDES_INSTRUCTIONS.md  CLAUDES_LESSONS_PHASE2.md  CLAUDES_LESSONS_PHASE3.md  CLAUDES_LESSONS_PHASE4.md  CLAUDES_LESSONS_PHASE5.md  PROMPT_TEMPLATE.md  THE_PLAN.md
docs/: QUOTA_MANAGEMENT_PHASE1_SPEC.md  QUOTA_MANAGEMENT_PHASE2_IMPLEMENTATION_STATUS.md  QUOTA_MANAGEMENT_PHASE2_SPEC.md  QUOTA_QUICK_START.md  QUOTA_VALIDATION_GUIDE.md  USER_ADMIN_SPEC.md
docs/specs/: APP_ROLES_RBAC_SPEC.md  FILE_MULTIMODAL_CHAT_SPEC.md
frontend/ai.client/: angular.json  package-lock.json  package.json
infrastructure/: cdk.context.json  package-lock.json
infrastructure/lib/: app-api-stack.ts  config.ts  frontend-stack.ts  gateway-stack.ts  inference-api-stack.ts  infrastructure-stack.ts
scripts/common/: load-env.sh
scripts/stack-app-api/: build.sh  deploy.sh  install.sh  push-to-ecr.sh  synth.sh  test.sh
scripts/stack-frontend/: build.sh  (+3 more)
(+251 files in other folders)
