[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore"
version = "0.1.0"
dependencies = [
    "strands-agents==1.14.0",
    "strands-agents-tools==0.2.3",
    "boto3>=1.40.1",
    "python-dotenv>=1.0.0",
    "ddgs>=9.0.0",
    "aws-opentelemetry-distro>=0.10.1",
    "bedrock-agentcore",
    "nova-act==2.3.18.0"
    # bedrock-agentcore[strands-agents]>=0.1.0
]